src = [
  './bout++.cxx',
  './field/field.cxx',
  './field/field2d.cxx',
  './field/field3d.cxx',
  './field/field_data.cxx',
  './field/field_factory.cxx',
  './field/fieldgenerators.cxx',
  './field/fieldgroup.cxx',
  './field/fieldperp.cxx',
  './field/generated_fieldops.cxx',
  './field/globalfield.cxx',
  './field/initialprofiles.cxx',
  './field/vecops.cxx',
  './field/vector2d.cxx',
  './field/vector3d.cxx',
  './field/where.cxx',
  './fileio/datafile.cxx',
  './fileio/dataformat.cxx',
  './fileio/formatfactory.cxx',
  './fileio/impls/hdf5/h5_format.cxx',
  './fileio/impls/netcdf/nc_format.cxx',
  './fileio/impls/netcdf4/ncxx4.cxx',
  './fileio/impls/pnetcdf/pnetcdf.cxx',
  './invert/fft_fftw.cxx',
  './invert/lapack_routines.cxx',
  './invert/laplace/impls/cyclic/cyclic_laplace.cxx',
  './invert/laplace/impls/multigrid/multigrid_alg.cxx',
  './invert/laplace/impls/multigrid/multigrid_laplace.cxx',
  './invert/laplace/impls/multigrid/multigrid_solver.cxx',
  './invert/laplace/impls/mumps/mumps_laplace.cxx',
  './invert/laplace/impls/pdd/pdd.cxx',
  './invert/laplace/impls/petsc/petsc_laplace.cxx',
  './invert/laplace/impls/serial_band/serial_band.cxx',
  './invert/laplace/impls/serial_tri/serial_tri.cxx',
  './invert/laplace/impls/shoot/shoot_laplace.cxx',
  './invert/laplace/impls/spt/spt.cxx',
  './invert/laplace/invert_laplace.cxx',
  './invert/laplace/laplacefactory.cxx',
  './invert/laplace3d/impls/petsc/petsc_laplace3d.cxx',
  './invert/laplace3d/laplace3d.cxx',
  './invert/laplace3d/laplace3d_factory.cxx',
  './invert/laplacexy/laplacexy.cxx',
  './invert/laplacexz/impls/cyclic/laplacexz-cyclic.cxx',
  './invert/laplacexz/impls/petsc/laplacexz-petsc.cxx',
  './invert/laplacexz/laplacexz.cxx',
  './invert/parderiv/impls/cyclic/cyclic.cxx',
  './invert/parderiv/impls/serial/serial.cxx',
  './invert/parderiv/invert_parderiv.cxx',
  './invert/parderiv/parderiv_factory.cxx',
  './mesh/boundary_factory.cxx',
  './mesh/boundary_region.cxx',
  './mesh/boundary_standard.cxx',
  './mesh/coordinates.cxx',
  './mesh/data/gridfromfile.cxx',
  './mesh/data/gridfromoptions.cxx',
  './mesh/difops.cxx',
  './mesh/fv_ops.cxx',
  './mesh/impls/bout/boutmesh.cxx',
  './mesh/index_derivs.cxx',
  './mesh/interpolation.cxx',
  './mesh/interpolation/bilinear.cxx',
  './mesh/interpolation/hermite_spline.cxx',
  './mesh/interpolation/interpolation_factory.cxx',
  './mesh/interpolation/lagrange_4pt.cxx',
  './mesh/mesh.cxx',
  './mesh/meshfactory.cxx',
  './mesh/parallel/fci.cxx',
  './mesh/parallel/shiftedmetric.cxx',
  './mesh/parallel_boundary_op.cxx',
  './mesh/parallel_boundary_region.cxx',
  './mesh/surfaceiter.cxx',
  './physics/gyro_average.cxx',
  './physics/physicsmodel.cxx',
  './physics/smoothing.cxx',
  './physics/sourcex.cxx',
  './solver/impls/arkode/arkode.cxx',
  './solver/impls/cvode/cvode.cxx',
  './solver/impls/euler/euler.cxx',
  './solver/impls/ida/ida.cxx',
  './solver/impls/imex-bdf2/imex-bdf2.cxx',
  './solver/impls/karniadakis/karniadakis.cxx',
  './solver/impls/petsc-3.1/petsc-3.1.cxx',
  './solver/impls/petsc-3.2/petsc-3.2.cxx',
  './solver/impls/petsc-3.3/petsc-3.3.cxx',
  './solver/impls/petsc-3.4/petsc-3.4.cxx',
  './solver/impls/petsc-3.5/petsc-3.5.cxx',
  './solver/impls/petsc/petsc.cxx',
  './solver/impls/power/power.cxx',
  './solver/impls/pvode/pvode.cxx',
  './solver/impls/rk3-ssp/rk3-ssp.cxx',
  './solver/impls/rk4/rk4.cxx',
  './solver/impls/rkgeneric/impls/cashkarp/cashkarp.cxx',
  './solver/impls/rkgeneric/impls/rk4simple/rk4simple.cxx',
  './solver/impls/rkgeneric/impls/rkf34/rkf34.cxx',
  './solver/impls/rkgeneric/impls/rkf45/rkf45.cxx',
  './solver/impls/rkgeneric/rkgeneric.cxx',
  './solver/impls/rkgeneric/rkscheme.cxx',
  './solver/impls/rkgeneric/rkschemefactory.cxx',
  './solver/impls/slepc-3.4/slepc-3.4.cxx',
  './solver/impls/snes/snes.cxx',
  './solver/monitor.cxx',
  './solver/solver.cxx',
  './solver/solverfactory.cxx',
  './sys/boutcomm.cxx',
  './sys/boutexception.cxx',
  './sys/comm_group.cxx',
  './sys/derivs.cxx',
  './sys/expressionparser.cxx',
  './sys/msg_stack.cxx',
  './sys/options.cxx',
  './sys/options/options_ini.cxx',
  './sys/optionsreader.cxx',
  './sys/output.cxx',
  './sys/petsclib.cxx',
  './sys/range.cxx',
  './sys/slepclib.cxx',
  './sys/stencils.cxx',
  './sys/timer.cxx',
  './sys/utils.cxx',
]

libbout = static_library('bout++',
                         sources: src,
                         include_directories: [incdir, configuration_inc],
                         dependencies: deps,
                         cpp_args: '-fopenmp',
                         link_args : '-fopenmp')
